# pandemic_control

./: .gitignore  README.md  main.py  pyproject.toml
configs/envs_tests/: default-seirad.json  default-seiradhv.json  default-seird.json
configs/hyper_param_search/: france_health_reward.json  france_health_reward_hosp_weight.json  france_health_reward_hosp_weight_max.json  france_health_reward_max.json  france_hosp_dec_health_weights_max.json  france_hosp_dec_weights.json  france_hosp_dec_weights_max.json  france_init_cond.json  france_init_cond_hosp_dec_health_weights_max.json  france_init_cond_reward_hosp_weight_max.json  paris_health_reward_hosp_weight_max.json  paris_health_reward_max.json  paris_hosp_dec_health_weights_max.json  paris_init_cond_hosp_dec_health_weights_max.json
configs/misc/: france.json  idf.json  italy.json  japan.json  malaysia.json  new-york.json  singapore.json  sweden.json  tokyo.json  united_kingdom.json  united_states.json
configs/real_world_data/: new-york.json  paris.json  singapore.json  tokyo.json
configs/test_population_size/: env-setup-pays.json  env-setup-province.json  env-setup-ville.json
configs/test_resistance/: params-fragile.json  params-resistant.json
configs/test_windows/: env-setup-15-days.json  env-setup-3-days.json  env-setup-7-days.json
data/: new-york.csv  paris.csv  singapore.csv  tokyo.csv
notebooks/: build_database.ipynb  dataframe_preprocessing.ipynb  envs_tests.ipynb  prepare_cities_datasets.ipynb  scenarios_tests.ipynb  training_evaluation.ipynb
pandemic_control/: __init__.py
pandemic_control/environment/: __init__.py  base.py  seir.py  seirad.py  seiradh.py  seiradhv.py  seird.py  sir.py  utils.py
pandemic_control/model/: __init__.py  base.py
pandemic_control/utils/: __init__.py  costs.py  plot_utils.py  rewards.py  runners.py  simulation.py
