[project]
name = "pandemic-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-lru==2.1.0",
    "attrs==25.4.0",
    "audioop-lts==0.2.2",
    "babel==2.17.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "executing==2.2.1",
    "farama-notifications==0.0.4",
    "fastjsonschema==2.21.2",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "fqdn==1.5.1",
    "fsspec==2026.1.0",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "grpcio==1.76.0",
    "gymnasium==1.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "json5==0.13.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-client==8.8.0",
    "jupyter-console==6.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.4",
    "jupyterlab==4.5.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "lab==8.8",
    "lark==1.3.1",
    "loguru==0.7.3",
    "markdown==3.10.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistune==3.2.0",
    "mpmath==1.3.0",
    "nbclient==0.10.4",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "notebook==7.5.2",
    "notebook-shim==0.2.4",
    "numpy==2.4.1",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "packaging==26.0",
    "pandas==3.0.0",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "prometheus-client==0.24.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.4",
    "psutil==7.2.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "sb3-contrib==2.7.1",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "send2trash==2.1.0",
    "sentry-sdk==2.50.0",
    "setuptools==80.10.1",
    "simplejson==3.20.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.8.3",
    "stable-baselines3==2.7.1",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tbparse==0.0.9",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.6.0",
    "txt2tags==3.9",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uri-template==1.3.0",
    "urllib3==2.6.3",
    "wandb==0.24.0",
    "wcwidth==0.3.0",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "werkzeug==3.1.5",
    "widgetsnbextension==4.0.15",
]

[tool.setuptools.packages.find]
    where = ["."] # Search in the current directory
    include = ["pandemic_control"] # Include packages starting with these names
